# rayfish

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  cliff.toml  justfile
.github/workflows/: ci.yml  nightly.yml  release.yml
android/: keystore.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
contrib/: com.pitopi.vpn.plist  com.rayfish.vpn.plist  pitopi.service  rayfish.service
docs/: SECURITY_AUDIT.md  book.md
docs/superpowers/plans/: 2026-06-19-phase1-hardening.md
docs/superpowers/specs/: 2026-06-20-three-word-names-design.md  2026-06-25-custom-relay-dns-design.md
ray-mobile/: Cargo.toml
ray-mobile/src/: android_tun.rs  lib.rs
ray-proto/: Cargo.toml
ray-proto/src/: ipc.rs  lib.rs  policy.rs
src/: acl.rs  apply.rs  audit.rs  config.rs  control.rs  daemon.rs  deeplink.rs  dht.rs  dns.rs  dns_config.rs  dns_packet.rs  firewall.rs  forward.rs  identity.rs  invite.rs  ipc.rs  lib.rs  main.rs  membership.rs  network_name.rs  peers.rs  ssh.rs  stats.rs  style.rs  transport.rs  tun.rs
src/cli/: alias.rs  firewall.rs  mod.rs  network.rs  open.rs  pair.rs  status.rs
src/daemon/: connect_service.rs  file_service.rs  mod.rs
src/daemon/handlers/: admin.rs  alias.rs  connect.rs  create_join.rs  diagnostics.rs  files.rs  firewall.rs  invite.rs  mod.rs  runtime.rs
src/daemon/mesh/: accept.rs  bootstrap.rs  files.rs  (+13 more)
tests/: e2e.sh
tests/bench/: README.md  provision.sh  run.sh  teardown.sh
tests/e2e/: .gitignore  README.md  provision.sh  run.sh  teardown.sh
tests/lib/: common.sh  provision.sh  teardown.sh
(+22 files in other folders)
