[package]
name = "pitopi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
iroh = "1"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tun = { version = "0.8.12", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
